# WarpMPC

./: .gitignore  .gitmodules  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  check_dependencies.py  jax_cache.py  mpax_linear_mpc_utils.py  run_all_paper_benchmarks_h100.sh  run_all_paper_benchmarks_h100_sequential.sh
benchmarks/embedded_ampc/: __init__.py  config.py  generate.py  run_suite.py
benchmarks/linear_mpc/: benchmark_boxosqp_linear_mpc.py  benchmark_jax_osqp_linear_mpc.py  benchmark_jaxproxqp_linear_mpc.py  benchmark_mpax_linear_mpc.py  benchmark_qpax_linear_mpc.py  common.sh  run_boxosqp_linear_mpc.sh  run_jax_osqp_linear_mpc.sh  run_mpax_linear_mpc.sh  run_qpax_linear_mpc.sh
benchmarks/linear_mpc_gradients/: benchmark_boxosqp_linear_mpc_gradients.py  benchmark_jax_osqp_linear_mpc_gradients.py  benchmark_mpax_linear_mpc_gradients.py  benchmark_qpax_linear_mpc_gradients.py  common.sh  run_boxosqp_linear_mpc_gradients.sh  run_jax_osqp_linear_mpc_gradients.sh  run_mpax_linear_mpc_gradients.sh  run_qpax_linear_mpc_gradients.sh
benchmarks/nonlinear_mpc/: benchmark_cartpole_quadratic_mpc.py  benchmark_constraint_sqp_iteration_sweep.py  benchmark_crazyflie_sqp_rollout.py  benchmark_humanoid_mpc.py  common.sh  (+41 more)
examples/: jax_ampc_minimal.py  jax_osqp_minimal.py  jax_qdldl_minimal.py  jax_sqp_derivatives_minimal.py  jax_sqp_minimal.py  jax_sqp_stagewise_minimal.py  utils.py
tests/: test_embedded_ampc_benchmarks.py  test_jax_ampc_code_export.py  test_jax_osqp.py  test_jax_qdldl_segments.py  test_jax_sqp.py
warpmpc/: __init__.py
(+140 files in other folders)
